BACKEND-3 Add endpoints
